feat: implement event retrieval methods in NostrService and StorageService; enhance meta tags in index.html for better social sharing

--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
   <title>Nostria</title>
@@ -7,17 +8,36 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 
+  <!-- Default meta tags for social sharing -->
+  <meta name="description" content="Making the Nostr protocol accessible to everyone, with a focus on user experience and performance for
+  global scale.">
+  <meta property="og:title" content="Nostria - Your Social Network">
+  <meta property="og:description" content="Making the Nostr protocol accessible to everyone, with a focus on user experience and performance for
+  global scale.">
+  <meta property="og:image" content="assets/icons/icon-512x512.png">
+  <meta property="og:type" content="website">
+  <meta property="og:site_name" content="Nostria">
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Nostria - Nostr Web Client">
+  <meta name="twitter:description" content="Making the Nostr protocol accessible to everyone, with a focus on user experience and performance for
+  global scale.">
+  <meta name="twitter:image" content="assets/icons/icon-512x512.png">
+
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
-  <link href="https://fonts.googleapis.com/css2?family=Protest+Strike&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Protest+Strike&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
+    rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
   <link rel="manifest" href="manifest.webmanifest">
   <meta name="theme-color" content="#1976d2">
 </head>
+
 <body class="mat-typography">
   <app-root></app-root>
   <noscript>Please enable JavaScript to continue using this application.</noscript>
 </body>
+
 </html>
