Add a beta indicator

--- a/src/index.html
+++ b/src/index.html
@@ -10,8 +10,7 @@
 
   <!-- Default meta tags for social sharing -->
   <meta name="description" content="Making the Nostr protocol accessible to everyone, with a focus on user experience and performance for
-  global scale.">
-  <meta property="og:site_name" content="Nostria">
+  global scale.">  <meta property="og:site_name" content="Nostria">
   <meta property="og:type" content="website">
 
   <meta property="og:title" content="Nostria - Your Social Network">
