--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,8 @@
 
   <!-- Default meta tags for social sharing -->
   <meta name="description" content="Making the Nostr protocol accessible to everyone, with a focus on user experience and performance for
-  global scale.">  <meta property="og:site_name" content="Nostria">
+  global scale.">
+  <meta property="og:site_name" content="Nostria">
   <meta property="og:type" content="website">
 
   <meta property="og:title" content="Nostria - Your Social Network">
@@ -30,7 +31,10 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Protest+Strike&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
     rel="stylesheet">
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <!-- <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"> -->
+  <!-- <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,300,0,0" /> -->
+  <!-- <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:FILL@0..1" /> -->
+  <link href="https://fonts.googleapis.com/icon?family=Material+Symbols+Outlined" rel="stylesheet" />
 
   <link rel="manifest" href="manifest.webmanifest">
   <meta name="theme-color" content="#1976d2">
