feat: Update theme color meta tags for light and dark modes in index.html

--- a/src/index.html
+++ b/src/index.html
@@ -37,7 +37,11 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Symbols+Outlined" rel="stylesheet" />
 
   <link rel="manifest" href="manifest.webmanifest">
-  <meta name="theme-color" content="#1976d2">
+  <!-- <meta name="theme-color" content="#1976d2"> -->
+
+  <meta name="theme-color" media="(prefers-color-scheme: light)" content="#FEF7FA" />
+  <meta name="theme-color" media="(prefers-color-scheme: dark)" content="#303030" />
+
 </head>
 
 <body class="mat-typography">
