--- a/src/index.html
+++ b/src/index.html
@@ -39,9 +39,7 @@
   <link rel="manifest" href="manifest.webmanifest">
   <!-- <meta name="theme-color" content="#1976d2"> -->
 
-  <meta name="theme-color" media="(prefers-color-scheme: light)" content="#FEF7FA" />
-  <meta name="theme-color" media="(prefers-color-scheme: dark)" content="#303030" />
-
+  <meta name="theme-color" content="#FEF7FA" />
 </head>
 
 <body class="mat-typography">
