--- a/src/index.html
+++ b/src/index.html
@@ -14,12 +14,12 @@
   <meta property="og:title" content="Nostria - Your Social Network">
   <meta property="og:description" content="Making the Nostr protocol accessible to everyone, with a focus on user experience and performance for
   global scale.">
-  <meta property="og:image" content="/assets/icons/icon-512x512.png">
+  <meta property="og:image" content="/icons/icon-512x512.png">
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="Nostria - Nostr Web Client">
   <meta name="twitter:description" content="Making the Nostr protocol accessible to everyone, with a focus on user experience and performance for
   global scale.">
-  <meta name="twitter:image" content="/assets/icons/icon-512x512.png">
+  <meta name="twitter:image" content="/icons/icon-512x512.png">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
