--- a/src/index.html
+++ b/src/index.html
@@ -7,18 +7,18 @@
   <base href="/" />
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
   <link rel="icon" type="image/x-icon" href="favicon.ico" />
-  <meta name="description" content="Making the Nostr protocol accessible to everyone, with a focus on user experience and performance for
-  global scale." />
+  <meta name="description" content="Nostria puts control back where it belongs: with you. Build your social network the way you want, keep your profile and data under your control, and share and explore a decentralized space that resists censorship while being quick to join and friendly to use.
+" />
   <meta property="og:site_name" content="Nostria" />
   <meta property="og:type" content="website" />
   <meta property="og:title" content="Nostria - Your Social Network" />
-  <meta property="og:description" content="Making the Nostr protocol accessible to everyone, with a focus on user experience and performance for
-  global scale." />
+  <meta property="og:description" content="Nostria puts control back where it belongs: with you. Build your social network the way you want, keep your profile and data under your control, and share and explore a decentralized space that resists censorship while being quick to join and friendly to use.
+" />
   <meta property="og:image" content="/assets/nostria-social.jpg" />
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="Nostria - Nostr Web Client" />
-  <meta name="twitter:description" content="Making the Nostr protocol accessible to everyone, with a focus on user experience and performance for
-  global scale." />
+  <meta name="twitter:title" content="Nostria - Your Social Network" />
+  <meta name="twitter:description" content="Nostria puts control back where it belongs: with you. Build your social network the way you want, keep your profile and data under your control, and share and explore a decentralized space that resists censorship while being quick to join and friendly to use.
+" />
   <meta name="twitter:image" content="/assets/nostria-social.jpg" />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
